# cut-and-project-tiling

./: .gitignore  1.bundle.js  LICENSE  README.md  build_dist.py  bundle.js  index.html  package-lock.json  package.json  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs  multigrid.rs
css/: main.css
docs/: gallery.md  intro.md
js/: bootstrap.js  controls.js  cutproject.js  rendergl.js  statecode.js  tiling.js  tiling_wasm.js  tilingview.js  vector.js
pkg/: tiling_rs.d.ts  tiling_rs.js  tiling_rs_bg.wasm  tiling_rs_bg.wasm.d.ts
