[package]
name = "tiling-rs"
version = "0.1.0"
description = "Multigrid tiling generator"
license = "MIT"
authors = ["Grant Glouser <gglouser@gmail.com>"]
repository = "https://github.com/gglouser/cut-and-project-tiling"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
# default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.29"
vectors = "0.3.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Link time optimization
lto = true
